--- a/app/src/main/res/layout/fragment_details_pane.xml
+++ b/app/src/main/res/layout/fragment_details_pane.xml
@@ -98,10 +98,86 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/fragment_details_card_synopsis"
+        android:id="@+id/fragment_details_card_genres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fragment_details_card_title">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:layout_marginTop="7dp"
+            android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_details_genre_title"
+            android:text="Movie genre:\n"
+            android:paddingEnd="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_marginBottom="-15dp"
+            android:paddingTop="7dp"
+            android:textColor="@color/pale_black"
+            android:textSize="16sp" />
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="7dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/fragment_details_genres_img1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="4dp"/>
+                    <ImageView
+                        android:id="@+id/fragment_details_genres_img2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"/>
+                    <ImageView
+                        android:id="@+id/fragment_details_genres_img3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        />
+                    <ImageView
+                        android:id="@+id/fragment_details_genres_img4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        />
+                </LinearLayout>
+            </HorizontalScrollView>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#399322"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="7dp"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/fragment_details_card_synopsis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fragment_details_card_genres">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -110,7 +186,8 @@
 
            <ScrollView
                android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+               android:layout_height="wrap_content"
+               android:layout_marginTop="7dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
@@ -123,7 +200,6 @@
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
-                       android:paddingTop="7dp"
                        android:layout_marginBottom="-15dp"
                        android:textColor="@color/pale_black"
                        android:textSize="16sp" />
@@ -146,6 +222,74 @@
                        android:text="@string/synopsis"
                        android:textColor="@color/pale_black"
                        android:textSize="15sp" />
+                   <TextView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/fragment_details_clips_title"
+                       android:text="Movie clips:\n"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:paddingTop="7dp"
+                       android:layout_marginBottom="-15dp"
+                       android:textColor="@color/pale_black"
+                       android:textSize="16sp" />
+                   <View
+                       android:layout_width="match_parent"
+                       android:layout_height="1dp"
+                       android:background="#399322"
+                       android:layout_marginLeft="7dp"
+                       android:layout_marginRight="7dp"
+                       android:layout_marginBottom="7dp"/>
+                   <HorizontalScrollView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginLeft="7dp"
+                       android:layout_marginRight="7dp"
+                       android:layout_marginBottom="7dp">
+                       <LinearLayout
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:orientation="horizontal">
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img1"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img2"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img3"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img4"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img5"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img6"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+                           <ImageView
+                               android:id="@+id/fragment_details_clips_img7"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="4dp"/>
+
+
+                           </LinearLayout>
+                       </HorizontalScrollView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
