--- a/app/src/main/res/layout/grid_full_card.xml
+++ b/app/src/main/res/layout/grid_full_card.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.menil.rottenmovies.RemoteImageView
+        <ImageView
             android:id="@+id/full_card_img"
             android:layout_width="match_parent"
             android:layout_height="230dp"
