--- a/app/src/main/res/layout/fragment_details_pane.xml
+++ b/app/src/main/res/layout/fragment_details_pane.xml
@@ -24,14 +24,14 @@
 
                 <ImageView
                     android:id="@+id/fragment_details_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="80dp"
+                    android:layout_height="130dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="0.5dp"
                     android:layout_marginTop="0.5dp"
-                    android:scaleType="fitXY"
                     android:src="@drawable/empty_img"
+                    android:scaleType="fitXY"
                     android:contentDescription="@string/details_img" />
 
                 <TextView
@@ -60,6 +60,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="37dp"
+                    android:gravity="bottom"
                     android:layout_toEndOf="@id/fragment_details_img"
                     android:layout_toRightOf="@id/fragment_details_img"
                     android:orientation="vertical">
@@ -98,100 +99,155 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/fragment_details_card_genres"
+        android:id="@+id/fragment_details_card_clips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fragment_details_card_title">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="7dp"
-            android:layout_marginTop="7dp"
             android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/fragment_details_genre_title"
-            android:text="Movie genre:\n"
-            android:paddingEnd="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginBottom="-15dp"
-            android:paddingTop="7dp"
-            android:textColor="@color/pale_black"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fragment_details_clips_title"
+                android:text="Movie clips:\n"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="7dp"
+                android:layout_marginBottom="-15dp"
+                android:textColor="@color/pale_black"
+                android:textSize="16sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#399322"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="7dp"/>
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
                 android:layout_marginRight="7dp"
-                android:layout_marginBottom="7dp">
+                android:layout_marginBottom="7dp"
+                android:scrollbarThumbVertical="@drawable/scrollbar_color">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
                     android:orientation="horizontal">
                     <ImageView
-                        android:id="@+id/fragment_details_genres_img1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginRight="4dp"/>
-                    <ImageView
-                        android:id="@+id/fragment_details_genres_img2"
+                        android:id="@+id/fragment_details_clips_img1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"/>
                     <ImageView
-                        android:id="@+id/fragment_details_genres_img3"
+                        android:id="@+id/fragment_details_clips_img2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        />
+                        android:layout_marginLeft="4dp"/>
                     <ImageView
-                        android:id="@+id/fragment_details_genres_img4"
+                        android:id="@+id/fragment_details_clips_img3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        />
+                        android:layout_marginLeft="4dp"/>
+                    <ImageView
+                        android:id="@+id/fragment_details_clips_img4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"/>
+                    <ImageView
+                        android:id="@+id/fragment_details_clips_img5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"/>
+                    <ImageView
+                        android:id="@+id/fragment_details_clips_img6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"/>
+                    <ImageView
+                        android:id="@+id/fragment_details_clips_img7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"/>
                 </LinearLayout>
             </HorizontalScrollView>
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#399322"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
-            android:layout_marginBottom="7dp"/>
-
-        </LinearLayout>
+            </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
     <android.support.v7.widget.CardView
         android:id="@+id/fragment_details_card_synopsis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/fragment_details_card_genres">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+        android:layout_below="@+id/fragment_details_card_clips">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:layout_marginTop="7dp">
+               android:layout_marginTop="7dp"
+               android:scrollbarThumbVertical="@drawable/scrollbar_color">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginBottom="3dp">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragment_details_genre_title"
+        android:text="Movie genre:\n"
+        android:paddingEnd="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="7dp"
+        android:layout_marginBottom="-15dp"
+        android:textColor="@color/pale_black"
+        android:textSize="16sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/fragment_details_genres_img1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"/>
+        <ImageView
+            android:id="@+id/fragment_details_genres_img2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"/>
+        <ImageView
+            android:id="@+id/fragment_details_genres_img3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            />
+        <ImageView
+            android:id="@+id/fragment_details_genres_img4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            />
+    </LinearLayout>
+    </LinearLayout>
+                       <View
+                           android:layout_width="match_parent"
+                           android:layout_height="1dp"
+                           android:background="#399322"
+                           android:layout_marginLeft="7dp"
+                           android:layout_marginRight="7dp"
+                           android:layout_marginBottom="7dp"/>
+
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
@@ -222,74 +278,7 @@
                        android:text="@string/synopsis"
                        android:textColor="@color/pale_black"
                        android:textSize="15sp" />
-                   <TextView
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:id="@+id/fragment_details_clips_title"
-                       android:text="Movie clips:\n"
-                       android:paddingEnd="10dp"
-                       android:paddingLeft="10dp"
-                       android:paddingRight="10dp"
-                       android:paddingTop="7dp"
-                       android:layout_marginBottom="-15dp"
-                       android:textColor="@color/pale_black"
-                       android:textSize="16sp" />
-                   <View
-                       android:layout_width="match_parent"
-                       android:layout_height="1dp"
-                       android:background="#399322"
-                       android:layout_marginLeft="7dp"
-                       android:layout_marginRight="7dp"
-                       android:layout_marginBottom="7dp"/>
-                   <HorizontalScrollView
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:layout_marginLeft="7dp"
-                       android:layout_marginRight="7dp"
-                       android:layout_marginBottom="7dp">
-                       <LinearLayout
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:orientation="horizontal">
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img1"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img2"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img3"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img4"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img5"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img6"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
-                           <ImageView
-                               android:id="@+id/fragment_details_clips_img7"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="4dp"/>
 
-
-                           </LinearLayout>
-                       </HorizontalScrollView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
@@ -355,7 +344,6 @@
 
                    </LinearLayout>
                </ScrollView>
-            </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
