--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/gridview_background"
     android:paddingTop="?android:attr/actionBarSize"
     tools:context=".HomeFragment">
 
@@ -15,6 +16,7 @@
         android:text="@string/app_name"
         android:textColor="@color/pale_black"
         android:textSize="35sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -29,54 +31,32 @@
         android:padding="10dp"
         android:layout_margin="10dp"
         android:layout_marginBottom="5dp">
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical">
-
-           <TextView
-               android:layout_width="fill_parent"
-               android:layout_height="wrap_content"
-               android:layout_alignParentTop="true"
-               android:id="@+id/nesto"
-               android:gravity="center"
-               android:text="Recently Viewed"
-               android:textColor="@color/pale_gray"
-               android:textSize="25sp" />
-
-               <GridView
-                   android:id="@+id/fragment_home_recent_scroll"
-                   android:layout_below="@id/nesto"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:numColumns="5"
-                   android:background="#f1f1f1"
-                   android:clickable="true"
-                   android:columnWidth="90dp"
-                   android:gravity="center"
-                   android:horizontalSpacing="5dp"
-                   android:stretchMode="columnWidth"
-                   android:textColor="@color/pale_black"
-                   android:scrollbarThumbVertical="@drawable/scrollbar_color"
-                   android:verticalSpacing="3dp">
-               </GridView>
-
-           <ImageView
-               android:layout_marginTop="-6dp"
-               android:layout_width="match_parent"
-               android:layout_below="@id/fragment_home_recent_scroll"
-               android:layout_height="wrap_content"
-               android:id="@+id/test_img"
-               android:src="@drawable/home_shelf"/>
-
-           </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Recently viewed"
+                android:textColor="@color/pale_gray"
+                android:textSize="25sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginLeft="7dp"
+                android:background="#399322" />
+            <ImageView
+                android:layout_marginTop="-6dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/test_img1"
+                android:src="@drawable/home_shelf"/>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginLeft="7dp"
-        android:background="#399322" />
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -94,36 +74,18 @@
                 android:text="@string/favourites"
                 android:textColor="@color/pale_gray"
                 android:textSize="25sp" />
-            <HorizontalScrollView
-                android:id="@+id/fragment_home_fav_scroll"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/empty_img"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/empty_img"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/empty_img"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/empty_img"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/empty_img"/>
-
-                </LinearLayout>
-            </HorizontalScrollView>
+                android:layout_height="1dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginLeft="7dp"
+                android:background="#399322" />
+            <ImageView
+                android:layout_marginTop="-6dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/test_img"
+                android:src="@drawable/home_shelf"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
