Fixed performance issues on some devices. Reworked Search.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,77 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#f1f1f1"
+    android:orientation="vertical"
+    android:paddingTop="?android:attr/actionBarSize"
+    tools:context=".HomeFragment">
+
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="?android:attr/actionBarSize"
-        android:background="#f1f1f1"
-        tools:context=".HomeFragment">
+        android:id="@+id/fragment_home_favourite_relative"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp">
 
-        <RelativeLayout
-            android:id="@+id/fragment_home_favourite_relative"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.CardView
+            android:id="@+id/fragment_home_favourite_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_home_favourite_card"
+            <LinearLayout
+                android:id="@+id/fragment_home_favourite_card_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/fragment_home_favourite_card_title"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:gravity="center"
+                    android:text="@string/favourites"
+                    android:textColor="@color/pale_gray"
+                    android:textSize="20sp" />
 
-                    <TextView
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/favourites"
-                        android:textColor="@color/pale_gray"
-                        android:textSize="20sp" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginRight="7dp"
-                        android:layout_marginLeft="7dp"
-                        android:background="#399322" />
-                </LinearLayout>
-
-                <Space
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="230dp" />
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
+                    android:background="#399322" />
+            </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="230dp" />
 
-            <com.menil.rottenmovies.HorizontialListView
-                android:id="@+id/listview_favourite"
-                android:layout_width="wrap_content"
-                android:layout_height="200dp"
-                android:layout_marginTop="-205dp"
-                android:layout_below="@id/fragment_home_favourite_card" />
+        </android.support.v7.widget.CardView>
 
-        </RelativeLayout>
-        <RelativeLayout
+        <com.menil.rottenmovies.HorizontialListView
+            android:id="@+id/listview_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_below="@id/fragment_home_favourite_card"
+            android:layout_marginTop="-205dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/fragment_home_recent_relative"
-        android:layout_below="@id/fragment_home_favourite_relative"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/fragment_home_favourite_relative">
 
         <android.support.v7.widget.CardView
             android:id="@+id/fragment_home_recent_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp">
+            android:padding="10dp">
 
             <LinearLayout
                 android:id="@+id/fragment_home_recent_card_title"
@@ -90,8 +91,8 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginRight="7dp"
                     android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
                     android:background="#399322" />
             </LinearLayout>
 
@@ -105,14 +106,15 @@
             android:id="@+id/listview_recent"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
-            android:layout_marginTop="-205dp"
-            android:layout_below="@id/fragment_home_recent_card" />
+            android:layout_below="@id/fragment_home_recent_card"
+            android:layout_marginTop="-205dp" />
 
     </RelativeLayout>
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/fragment_home_recent_relative"
-    android:src="@drawable/actionbar_icon"
-    android:scaleType="fitEnd"/>
-    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/fragment_home_recent_relative"
+        android:scaleType="fitEnd"
+        android:src="@drawable/actionbar_icon" />
+</RelativeLayout>
