--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -8,14 +8,14 @@
     sothree:panelHeight="141dp"
     sothree:shadowHeight="4dp">
 
-    <ImageView
+    <com.menil.rottenmovies.RemoteImageView
         android:id="@+id/fragment_details_img_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
+        android:contentDescription="@string/bck_img_details"
         android:scaleType="centerCrop"
-        android:src="@drawable/empty_img_big"
-        android:contentDescription="@string/bck_img_details" />
+        android:src="@drawable/empty_img_big" />
 
     <include layout="@layout/fragment_details_pane" />
 
