--- a/app/src/main/res/layout/grid_full_card_home.xml
+++ b/app/src/main/res/layout/grid_full_card_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <com.menil.rottenmovies.RemoteImageView
             android:id="@+id/full_card_img"
             android:layout_width="110dp"
             android:layout_height="155dp"
@@ -33,12 +33,12 @@
                 android:id="@+id/full_card_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="3dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginStart="3dp"
                 android:contentDescription="@string/movie_title_placeholder"
                 android:ellipsize="marquee"
-                android:layout_marginLeft="3dp"
-                android:layout_marginStart="3dp"
-                android:layout_marginRight="3dp"
-                android:layout_marginEnd="3dp"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:text="@string/app_name"
