--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -40,14 +40,13 @@
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="3dp">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:id="@+id/fragment_list_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <!--<com.menil.rottenmovies.RemoteImageView-->
-            <ImageView
+            <com.menil.rottenmovies.RemoteImageView
                 android:id="@+id/fragment_list_item_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
