--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,11 +4,11 @@
     tools:context=".Main">
     <item
         android:id="@+id/action_search"
-        android:orderInCategory="100"
-        android:title="Search"
+        android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
-        app:showAsAction="always"
-        android:actionViewClass="android.widget.SearchView" />
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/search_string" />
     <item
         android:id="@+id/action_exit"
         android:orderInCategory="200"
