--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/search_no_movies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:gravity="center"
         android:text="@string/no_movies_searched"
         android:textColor="#399322"
@@ -21,7 +19,6 @@
         android:id="@+id/search_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:divider="@android:color/transparent"
@@ -33,13 +30,10 @@
         android:id="@+id/search_list_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@drawable/abc_ic_search_api_mtrl_alpha"
+        android:src="@drawable/ic_action_up"
         fab:fab_colorNormal="@color/green"
         fab:fab_colorPressed="@color/green_900"
         fab:fab_colorRipple="@color/green_700" />
-</RelativeLayout>
+</FrameLayout>
