--- a/app/src/main/res/menu/menu_favourites.xml
+++ b/app/src/main/res/menu/menu_favourites.xml
@@ -5,7 +5,7 @@
         android:id="@+id/action_share"
         android:icon="@drawable/ic_share_white_48dpt"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:title="@string/action_share" />
     <item
         android:id="@+id/action_search"
@@ -19,13 +19,13 @@
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_black_48dp"
         android:orderInCategory="300"
-        android:showAsAction="collapseActionView"
+        android:showAsAction="never"
         android:title="@string/action_settings" />
     <item
         android:id="@+id/action_about"
         android:icon="@drawable/ic_help_black_48dp"
         android:orderInCategory="400"
-        android:showAsAction="collapseActionView"
+        android:showAsAction="never"
         android:title="@string/action_about" />
     <item
         android:id="@+id/action_exit"
