--- a/app/src/main/res/menu/menu_favourites.xml
+++ b/app/src/main/res/menu/menu_favourites.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:orderInCategory="200"
         android:showAsAction="ifRoom"
-        android:title="@string/search_string" />
+        android:title="@string/action_search" />
 
     <item
         android:id="@+id/action_settings"
