--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:orderInCategory="200"
         android:showAsAction="always"
-        android:title="@string/search_string" />
+        android:title="@string/action_search" />
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_black_48dp"
