--- a/app/src/main/res/layout/activity_details_img.xml
+++ b/app/src/main/res/layout/activity_details_img.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:src="@drawable/ic_share_white_48dp"
         sothree:fab_colorNormal="@color/green"
         sothree:fab_colorPressed="@color/green_500"
