--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,123 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <ScrollView
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:background="#f1f1f1"
-    android:orientation="vertical"
-    android:paddingTop="?android:attr/actionBarSize">
-
+    tools:context=".HomeFragment">
     <RelativeLayout
-        android:id="@+id/fragment_home_favourite_relative"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="5dp">
+        android:orientation="vertical"
+        android:paddingTop="?android:attr/actionBarSize">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/fragment_home_favourite_card"
-            android:layout_width="match_parent"
+        <RelativeLayout
+            android:id="@+id/fragment_home_favourite_relative"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:padding="10dp">
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="5dp">
 
-            <LinearLayout
-                android:id="@+id/fragment_home_favourite_card_title"
+            <android.support.v7.widget.CardView
+                android:id="@+id/fragment_home_favourite_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="10dp">
 
-                <TextView
-                    android:layout_width="fill_parent"
+                <LinearLayout
+                    android:id="@+id/fragment_home_favourite_card_title"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/favourites"
-                    android:textColor="@color/pale_gray"
-                    android:textSize="20sp" />
+                    android:orientation="vertical">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:background="#399322" />
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/favourites"
+                        android:textColor="@color/pale_gray"
+                        android:textSize="20sp" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-            </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginRight="7dp"
+                        android:background="#399322" />
 
-        </android.support.v7.widget.CardView>
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp" />
+                </LinearLayout>
 
-        <org.lucasr.twowayview.TwoWayView
-            android:id="@+id/listview_favourite"
-            style="@style/TwoWayView"
+            </android.support.v7.widget.CardView>
+
+            <org.lucasr.twowayview.TwoWayView
+                android:id="@+id/listview_favourite"
+                style="@style/TwoWayView"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:layout_alignParentTop="true"
+                android:drawSelectorOnTop="true"
+                android:elevation="3dp"
+                android:paddingTop="30dp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/fragment_home_recent_relative"
             android:layout_width="wrap_content"
-            android:layout_height="240dp"
-            android:layout_alignParentTop="true"
-            android:drawSelectorOnTop="true"
-            android:paddingTop="30dp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/fragment_home_recent_relative"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/fragment_home_favourite_relative">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/fragment_home_recent_card"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:padding="10dp">
+            android:layout_below="@id/fragment_home_favourite_relative">
 
-            <LinearLayout
-                android:id="@+id/fragment_home_recent_card_title"
+            <android.support.v7.widget.CardView
+                android:id="@+id/fragment_home_recent_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="10dp">
 
-                <TextView
-                    android:layout_width="fill_parent"
+                <LinearLayout
+                    android:id="@+id/fragment_home_recent_card_title"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Recently viewed movies"
-                    android:textColor="@color/pale_gray"
-                    android:textSize="20sp" />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:background="#399322" />
+                    android:orientation="vertical">
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Recently viewed movies"
+                        android:textColor="@color/pale_gray"
+                        android:textSize="20sp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginRight="7dp"
+                        android:background="#399322" />
 
-        </android.support.v7.widget.CardView>
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp" />
+                </LinearLayout>
 
-        <org.lucasr.twowayview.TwoWayView
-            android:id="@+id/listview_recent"
-            style="@style/TwoWayView"
+            </android.support.v7.widget.CardView>
 
-            android:layout_width="wrap_content"
-            android:layout_height="210dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="30dp"
-            android:drawSelectorOnTop="true" />
+            <org.lucasr.twowayview.TwoWayView
+                android:id="@+id/listview_recent"
+                style="@style/TwoWayView"
+                android:layout_width="match_parent"
+                android:layout_height="210dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="30dp"
+                android:drawSelectorOnTop="true"
+                android:elevation="3dp"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
-
-</RelativeLayout>
 </ScrollView>
