--- a/app/src/main/res/layout/grid_full_card_home.xml
+++ b/app/src/main/res/layout/grid_full_card_home.xml
@@ -1,11 +1,19 @@
 <!-- A CardView that contains a TextView -->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    card_view:cardElevation="3dp">
+    android:paddingRight="3dp">
+<android.support.v7.widget.CardView
+
+    android:id="@+id/card_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    card_view:cardElevation="3dp"
+    android:elevation="3dp">
 
     <RelativeLayout
         android:id="@+id/full_card_2"
@@ -19,7 +27,6 @@
             android:layout_height="155dp"
             android:adjustViewBounds="true"
             android:background="#f1f1f1"
-            android:contentDescription="GridImg"
             android:scaleType="fitXY" />
 
         <LinearLayout
@@ -65,3 +72,4 @@
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
+</RelativeLayout>
