--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -2,7 +2,6 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
     android:clickable="false"
     android:descendantFocusability="afterDescendants"
     android:focusable="false"
@@ -31,14 +30,14 @@
     </LinearLayout>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_view_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/header_layout"
-        android:layout_gravity="center"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="3dp">
+        card_view:cardElevation="3dp"
+        android:elevation="3dp">
 
         <LinearLayout
             android:id="@+id/fragment_list_item"
@@ -134,20 +133,28 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/list_full_card_links"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="2dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="2dp"
         android:gravity="end"
         android:orientation="vertical"
-        android:paddingBottom="15dp">
+        android:paddingBottom="15dp"
+        android:elevation="3dp">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/list_full_card_rotten"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end">
+            card_view:cardElevation="2dp"
+            card_view:cardCornerRadius="2dp"
+            android:layout_margin="2dp"
+            android:elevation="2dp">
 
 
             <ImageView
@@ -161,10 +168,17 @@
 
         </android.support.v7.widget.CardView>
 
+        <Space
+            android:layout_width="5dp"
+            android:layout_height="4dp" />
         <android.support.v7.widget.CardView
+            android:id="@+id/list_full_card_imdb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end">
+            card_view:cardElevation="2dp"
+            card_view:cardCornerRadius="2dp"
+            android:layout_margin="2dp"
+            android:elevation="2dp">
 
 
             <ImageView
