--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,26 +12,24 @@
         android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:orderInCategory="200"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:title="@string/action_search" />
 
-    <item
+    <!--<item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_black_48dp"
         android:orderInCategory="300"
         android:showAsAction="collapseActionView"
-        android:title="@string/action_settings" />
+        android:title="@string/action_settings" />-->
     <item
         android:id="@+id/action_about"
         android:icon="@drawable/ic_help_black_48dp"
-        android:orderInCategory="400"
+        android:orderInCategory="300"
         android:showAsAction="collapseActionView"
         android:title="@string/action_about" />
     <item
         android:id="@+id/action_exit"
-        android:orderInCategory="500"
+        android:orderInCategory="400"
         android:showAsAction="never"
         android:title="@string/action_exit" />
-
-
 </menu>
