--- a/app/src/main/res/layout/activity_details_pane.xml
+++ b/app/src/main/res/layout/activity_details_pane.xml
@@ -217,30 +217,89 @@
                         android:layout_gravity="end"
                         android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/activity_details_genres_img1"
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:orientation="vertical"
                             android:layout_marginLeft="4dp"
-                            android:layout_marginRight="4dp" />
+                            android:layout_marginRight="4dp" >
+                            <ImageView
+                                android:id="@+id/activity_details_genres_img1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/activity_details_genres_txt1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textSize="10sp"/>
+                            </LinearLayout>
 
-                        <ImageView
-                            android:id="@+id/activity_details_genres_img2"
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="4dp" />
-
-                        <ImageView
-                            android:id="@+id/activity_details_genres_img3"
+                            android:orientation="vertical"
+                            android:layout_marginLeft="4dp">
+                            <ImageView
+                                android:id="@+id/activity_details_genres_img2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/activity_details_genres_txt2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textSize="10sp"/>
+                        </LinearLayout>
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="4dp" />
-
-                        <ImageView
-                            android:id="@+id/activity_details_genres_img4"
+                            android:orientation="vertical"
+                            android:layout_marginLeft="4dp">
+                            <ImageView
+                                android:id="@+id/activity_details_genres_img3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/activity_details_genres_txt3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textSize="10sp"/>
+                        </LinearLayout>
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="4dp" />
+                            android:orientation="vertical"
+                            android:layout_marginLeft="4dp">
+                            <ImageView
+                                android:id="@+id/activity_details_genres_img4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/activity_details_genres_txt4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textSize="10sp"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_marginLeft="4dp">
+                            <ImageView
+                                android:id="@+id/activity_details_genres_img5"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/activity_details_genres_txt5"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textSize="10sp"/>
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -352,7 +411,12 @@
                     android:text="@string/synopsis"
                     android:textColor="@color/pale_black"
                     android:textSize="15sp" />
-
+                <com.facebook.widget.LoginButton
+                    android:visibility="invisible"
+                    android:id="@+id/authButton_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
         </ScrollView>
 
@@ -372,4 +436,5 @@
         sothree:fab_colorNormal="@color/green"
         sothree:fab_colorPressed="@color/green_500"
         sothree:fab_colorRipple="@android:color/white" />
+
 </RelativeLayout>
