--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -91,34 +91,45 @@
                             android:textStyle="bold|italic" />
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_marginRight="50dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
                             android:orientation="vertical">
+                            <TextView
+                                android:id="@+id/fragment_list_item_rating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="marquee"
+                                android:scrollHorizontally="true"
+                                android:singleLine="true"
+                                android:text="@string/critics_placeholder"
+                                android:textColor="@color/green_700"
+                                android:textSize="16sp" />
 
                             <TextView
                                 android:id="@+id/fragment_list_item_runtime"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:ellipsize="marquee"
+                                android:scrollHorizontally="true"
+                                android:singleLine="true"
                                 android:text="@string/runtime_placeholder2"
                                 android:textColor="@color/pale_black"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/fragment_list_item_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:ellipsize="marquee"
+                                android:scrollHorizontally="true"
+                                android:singleLine="true"
                                 android:text="@string/release_placeholder"
                                 android:textColor="@color/pale_gray"
-                                android:textSize="14sp" />
+                                android:textSize="12sp" />
 
-                            <TextView
-                                android:id="@+id/fragment_list_item_rating"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/critics_placeholder"
-                                android:textColor="@color/green_700"
-                                android:textSize="14sp" />
+
                         </LinearLayout>
                     </RelativeLayout>
 
